--- a/index.html
+++ b/index.html
@@ -97,10 +97,10 @@
                     <div class="single_about_info">
                         <h3>0 Tutorials <br>
                             from 0 Courses</h3>
-                        <p>Join with Bitpoint to get latest information about this field and be
-                            touch with our tutorials.Always we try to enhance your knowledge 
-                            and these courses are totally free of charge. Be with us.</p>
-                        <a href="#" class="boxed_btn">Enroll a Course</a>
+                        <p>Join us to get latest knowledge about these fields and be in
+                            touch with our tutorials.We always try to enhance your knowledge 
+                            with these courses that are totally free of charge. Be with us.</p>
+                        <a href="#" class="boxed_btn">Enroll in a Course</a>
                     </div>
                 </div>
                 <div class="col-xl-6 offset-xl-1 col-lg-6">
